Было исправлено несколько касяков все четка работает.